Usage of StandardCharsets where it’s needed.